@@ -27,13 +27,8 @@ SIM_AC_OPTION_CGEN_MAINT
 AC_SUBST(traps_obj)
 AC_SUBST(sim_extra_cflags)
 
-SIM_AC_OPTION_HARDWARE(always,"","")
-
-if test -z "$SIM_DV_SOCKSER_O"; then
-	AC_MSG_ERROR([Sorry, but hardware support in this simulator unconditionally
-relies on dv-sockser.o which is unavailable for your host. Please fix this
-simulator.])
-fi
-
+SIM_AC_OPTION_HARDWARE(yes,"","")
+m32r_extra_objs="$SIM_DV_SOCKSER_O"
+AC_SUBST(m32r_extra_objs)
 
 SIM_AC_OUTPUT
